# ClarityOCR

./: .gitignore  API_GUIDE.md  BUG_ANALYSIS_AND_FIX.md  CLAUDE.md  COMPLETION_SUMMARY.txt  DEBUGGING_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.universal  ENTERPRISE_UPGRADE_PLAN.md  INDEX.md  LICENSE  PATCH.diff  README-APPLE-SILICON.md  README.md  README_FIX.md  ROADMAP_48H_SPRINT.md  ROLLBACK.md  VERIFICATION_CHECKLIST.md  docker-compose.local.yml  docker-compose.yml  install.bat  pyproject.toml  requirements-apple-silicon.txt  requirements.txt  run.bat  test.md
clarityocr/: __init__.py  api_v2.py  canary.py  cli.py  converter.py  db.py  device_utils.py  errors.py  fallback_converter.py  job_manager.py  merger.py  metadata.py  naming.py  pipeline_v2.py  pipeline_v2_fixed.py  polish.py  quality_gates.py  resource_limits.py  security.py  server.py  simple_converter.py  structured_logger.py  version.py
clarityocr/web/: __init__.py
clarityocr/web/static/: app.js  editor.html  index.html  llm-polish.css  llm-polish.html  llm-polish.js  state-manager.js  style.css  v2-app.js  v2-style.css
scripts/: canon_check.py  ci_smoke.py  e2e_v2_local_vllm.py  eval_model_canary.py
tests/: test_api_v2_robustness.py  test_api_v2_uploads.py  test_markers.py  test_mojibake.py  test_pipeline_v2_resilience.py  test_polish.py  test_v2_merge.py
